--- a/.github/workflows/add-3plicense-warning.yml
+++ b/.github/workflows/add-3plicense-warning.yml
@@ -23,9 +23,10 @@ jobs:
     steps:
       - run: |
           BODY_MSG=$(cat << EOF
-          ⚠️ This PR changes updates setup.py file.
-          If any 📚 library added or removed in setup.py, PR 💫 Creator must update 📃 THIRD_PARTY_LICENSES.txt file.
-          PR ☑️️ Approver must confirm, that 📃 THIRD_PARTY_LICENSES.txt file updated, if required.
+          ⚠️ This PR changes updates `setup.py` file. ⚠️ 
+          
+          - PR Creator must update 📃 THIRD_PARTY_LICENSES.txt, if any 📚 library added/removed in `setup.py`.
+          - PR Approver must confirm 📃 THIRD_PARTY_LICENSES.txt updated, if any 📚 library added/removed in `setup.py`.
           EOF
           )
           echo "BODY_MSG<<EOF" >> $GITHUB_ENV
