--- a/.github/workflows/add-3plicense-warning.yml
+++ b/.github/workflows/add-3plicense-warning.yml
@@ -40,5 +40,5 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: '${{env.BODY_MSG}}'
+              body: `${{ env.BODY_MSG }}`
             })
