--- a/.github/workflows/add-3plicense-warning.yml
+++ b/.github/workflows/add-3plicense-warning.yml
@@ -23,10 +23,9 @@ jobs:
     steps:
       - run: |
           BODY_MSG=$(cat << EOF
-          ⚠️ This PR changes updates \`setup.py\` file. ⚠️ 
-          
-          - PR Creator must update 📃 THIRD_PARTY_LICENSES.txt, if any 📚 library added/removed in \`setup.py\`.
-          - PR Approver must confirm 📃 THIRD_PARTY_LICENSES.txt updated, if any 📚 library added/removed in \`setup.py\`.
+          ⚠️ This PR changes updates `setup.py` file. ⚠️ 
+            - PR Creator must update 📃 THIRD_PARTY_LICENSES.txt, if any 📚 library added/removed in `setup.py`.
+            - PR Approver must confirm 📃 THIRD_PARTY_LICENSES.txt updated, if any 📚 library added/removed in `setup.py`.
           EOF
           )
           echo "BODY_MSG<<EOF" >> $GITHUB_ENV
@@ -40,5 +39,5 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: `${{ env.BODY_MSG }}`
+              body: "${{ env.BODY_MSG }}"
             })
