--- a/.github/workflows/add-3plicense-warning.yml
+++ b/.github/workflows/add-3plicense-warning.yml
@@ -23,7 +23,7 @@ jobs:
     steps:
       - run: |
           BODY_MSG=$(cat << EOF
-          ⚠️ This PR changes updates **setup.py** file. ⚠️ 
+          ⚠️ This PR changed **setup.py** file. ⚠️ 
             - PR Creator must update 📃 THIRD_PARTY_LICENSES.txt, if any 📚 library added/removed in **setup.py**.
             - PR Approver must confirm 📃 THIRD_PARTY_LICENSES.txt updated, if any 📚 library added/removed in **setup.py**.
           EOF
