--- a/.github/workflows/publish-to-readthedocs.yml
+++ b/.github/workflows/publish-to-readthedocs.yml
@@ -1,10 +1,7 @@
 name: "Publish Docs"
 
-on:
-  # Auto-trigger this workflow on tag creation
-  push:
-    tags:
-      - 'v*.*.*'
+# To run this workflow manually from the Actions tab
+on: workflow_dispatch
 
 env:
   RTDS_ADS_PROJECT: https://readthedocs.org/api/v3/projects/accelerated-data-science
