--- a/ads/opctl/docker/Dockerfile.job
+++ b/ads/opctl/docker/Dockerfile.job
@@ -1,7 +1,7 @@
-# Copyright (c) 2021 Oracle and/or its affiliates.
+# Copyright (c) 2021, 2023 Oracle and/or its affiliates.
 # Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl/
 
-FROM  --platform=linux/amd64 ghcr.io/oracle/oraclelinux:7-slim
+FROM ghcr.io/oracle/oraclelinux:7-slim
 
 # Configure environment
 ENV DATASCIENCE_USER datascience
@@ -10,16 +10,20 @@ ENV HOME /home/$DATASCIENCE_USER
 ENV DATASCIENCE_INSTALL_DIR /etc/datascience
 ENV LOGS_DIRECTORY /logs
 
+ARG release=19
+ARG update=13
+
 RUN \
-    yum -y -q install oracle-release-el7 deltarpm && \
+    yum -y -q install oracle-release-el7 && \
     yum-config-manager --add-repo http://yum.oracle.com/repo/OracleLinux/OL7/developer_EPEL/x86_64 && \
     yum-config-manager --enable ol7_optional_latest --enable ol7_addons --enable ol7_software_collections --enable ol7_oracle_instantclient > /dev/null && \
-    yum install -y -q \
-    build-essential \
+    yum groupinstall -y -q 'Development Tools' && \
+    yum update -y && \
+    yum install -y --setopt=skip_missing_names_on_install=False \
     bzip2 \
     curl \
     git \
-    gfortran \
+    gcc-gfortran \
     libcurl-devel \
     libxml2-devel \
     oracle-instantclient${release}.${update}-basic \
@@ -30,14 +34,11 @@ RUN \
     sudo \
     unzip \
     zip \
-    g++ \
+    gcc-c++ \
     wget \
     gcc \
-    vim \
-    yum groupinstall -y -q development tools \
     && yum clean all \
     && rm -rf /var/cache/yum/*
-
 
 # setup user
 RUN \
@@ -49,8 +50,6 @@ RUN \
   mkdir -p $DATASCIENCE_INSTALL_DIR && chown $DATASCIENCE_USER $DATASCIENCE_INSTALL_DIR && \
   mkdir -p $LOGS_DIRECTORY && chown -R $DATASCIENCE_USER:users $LOGS_DIRECTORY && \
   mkdir -p $LOGS_DIRECTORY/harness && chown -R $DATASCIENCE_USER:users $LOGS_DIRECTORY/harness
-#   mkdir -p /home/$DATASCIENCE_USER/condapack
-
 
 RUN mkdir -p /etc/datascience/build
 RUN mkdir -p $DATASCIENCE_INSTALL_DIR/{pre-build-ds,post-build-ds,pre-run-ds,pre-run-user}
@@ -62,15 +61,13 @@ ENV LANG=$LANG
 ENV SHELL=/bin/bash
 
 # set /opt folder permissions for $DATASCIENCE_USER. Conda is going to live in this folder.
-RUN chown $DATASCIENCE_USER /opt
+RUN chown -R $DATASCIENCE_USER /opt
 
 USER $DATASCIENCE_USER
 WORKDIR /home/datascience
-RUN curl -L https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh >> /home/datascience/miniconda.sh \
+RUN wget -nv https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh -O /home/datascience/miniconda.sh \
     && /bin/bash /home/datascience/miniconda.sh -f -b -p /opt/conda \
     && rm /home/datascience/miniconda.sh \
-    && ls  /opt/**/* \
-    && /opt/conda/bin/conda install python=3.8 anaconda \
     && /opt/conda/bin/conda clean -yaf
 
 WORKDIR /
@@ -82,10 +79,8 @@ USER $DATASCIENCE_USER
 ENV PATH="/opt/conda/bin:${PATH}"
 WORKDIR /home/datascience
 
-
-#COPY base-env.yaml /opt/base-env.yaml
-#RUN conda env update -q -n root -f /opt/base-env.yaml && conda clean -yaf && rm -rf /home/datascience/.cache/pip
-
+COPY docker/base-env.yaml /opt/base-env.yaml
+RUN conda env update -q -n root -f /opt/base-env.yaml && conda clean -yaf && rm -rf /home/datascience/.cache/pip
 
 USER $DATASCIENCE_USER
 
@@ -97,10 +92,10 @@ RUN conda list
 
 USER root
 
+ARG PIP_INDEX_URL
+
 ############# Setup Conda environment tools ###########################
 ARG RAND=1
-
-RUN pip install conda_pack oci-cli
 
 ARG RUN_WORKING_DIR="/home/datascience"
 WORKDIR $RUN_WORKING_DIR
@@ -108,9 +103,6 @@ WORKDIR $RUN_WORKING_DIR
 # clean tmp folder
 RUN rm -rf /tmp/*
 
-#COPY harness.py /etc/datascience/harness.py
 RUN mkdir -p /etc/datascience/operators
-# Temporarily removing operators related components
-# COPY operators/run.py /etc/datascience/operators/run.py
 
 USER datascience
