--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,6 +13,7 @@ repos:
         args: ['--allow-multiple-documents']
     -   id: detect-private-key
     -   id: end-of-file-fixer
+        exclude: '\.ipynb?$'
     -   id: pretty-format-json
         args: ['--autofix']
     -   id: trailing-whitespace
